_sass/_header.scss
.header {
  background: $background-color;
  font-family: $header-font-family;
  padding-bottom: 20px;
  padding-top: 20px;
  position: relative;
  transition: top 0.2s;
  max-width: 100vw;
  z-index: 2;
}

.header__title {
  h1 { margin: 0; }
  @include grid-column(7, $header-grid);
  margin-left: 20px;
  @include grid-media($medium-grid) {
    @include grid-column(3, $header-grid);
    @include grid-push(1, $header-grid);
  }
  @include grid-media($extra-large-grid) {
    @include grid-column(5, $header-grid);
    @include grid-push(2, $header-grid);
  }
}

.header__navigation {
  height: 60px;
  text-align: right;
  @include grid-media($medium-grid) {
     @include grid-column(12, $header-grid);
     height: 88px;
     margin: auto;
  }
  @include grid-media($large-grid) {
    @include grid-column(11, $header-grid);
  }
  @include grid-media($extra-large-grid) {
    @include grid-column(7, $header-grid);
  }
}

.header__logo {
  height: 60px;
  width: auto;
  @include grid-media($medium-grid) {
    height: auto;
    width: 145px;
  }
}

.header__navigation {
  text-transform: uppercase;

  ul {
    display: none;
    list-style-type: none;

    li {
      display: inline;
      margin-left: 30px;
    }
  }

  @include grid-media($medium-grid) {
    ul {
      display: block;
    }
  }
}

.header--mobile {
  font-size: $mobile-nav-font-size;

  .header__navigation {
    ul {
      height: 100vh;
      margin: 0;
      padding: calc(100vh / 4) 0;
      position: relative;
      z-index: 2;

      li {
        display: block;
        margin-left: 0;
        height: calc(18%);
      }
    }
  }
}

.header--mobile-open {
  .header__title {
    display: none;
  }

  .header__navigation {
    background: $background-color;
    float: none;
    left: 0;
    margin-left: 0;
    position: absolute;
    text-align: center;
    top: 0;
    width: 100vw;

  }
}

.header__mobile-nav-btn {
  position: absolute;
  right: 20px;
  top: 35px;
  z-index: 5;
  @extend %clear-btn;

  @include grid-media($medium-grid) {
    display: none;
    right: 30px;
  }
}

.header__mobile-nav-btn--close {
  display: none;
}

